# infared_human_tracking

./: .gitignore  README.md  pyproject.toml  receive.py  run.ps1  run.sh  run_macos.sh  run_rpi.sh  setup_macos.sh  setup_rpi.sh  setup_win.sh  visualise_i2c.py
arduino/ir/: ir.ino
assets/Lightshow patches Project/: ._Lightshow patches.als  ._Samples  Lightshow patches.als
assets/Lightshow patches Project/Backup/: ._Lightshow patches [2024-08-20 204200].als  ._Lightshow patches [2024-08-22 144407].als  ._Lightshow patches [2024-08-22 161557].als  ._Lightshow patches [2024-08-22 161628].als  ._Lightshow patches [2024-08-22 163135].als  ._Lightshow patches [2024-08-28 142508].als  ._Lightshow patches [2024-08-28 155827].als  ._Lightshow patches [2024-08-28 163328].als  ._Lightshow patches [2024-08-28 163422].als  ._Lightshow patches [2024-08-28 190248].als  Lightshow patches [2024-08-28 142508].als  Lightshow patches [2024-08-28 155827].als  Lightshow patches [2024-08-28 163328].als  Lightshow patches [2024-08-28 163422].als  Lightshow patches [2024-08-28 190248].als  Lightshow patches [2024-08-28 203412].als  Lightshow patches [2024-08-31 181237].als  Lightshow patches [2024-08-31 181926].als  Lightshow patches [2024-08-31 182335].als  Lightshow patches [2024-08-31 182352].als
assets/Lightshow patches Project/Samples/: ._Processed
assets/v2/Lightshow patches Project/: ._Icon  (+1 more)
lights/: reactive_lights.toe
rpi/: print_gpio.py  print_ic2.py  pyproject.toml  run_rpi.sh  setup_rpi.sh
src/: arduino.py  graph.py  main.py  midi.py  rpi.py  rpi_comm.py  stats.py
(+15 files in other folders)
